# Resonance-Engine

./: .gitignore  README.md  ROLES.md  projectskeleton.txt
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/: celery_app.py  config.py
backend/src/agents/: entity_resolution.py  event_extraction.py  impact_hypothesis.py  ingestion_agent.py  pipeline.py  risk_gate.py  state.py
backend/src/api/: app.py  deps.py  middleware.py
backend/src/api/routes/: entities.py  (+4 more)
backend/src/evaluation/: backtester.py  calibration.py  drift_detector.py  experiment_tracker.py  metrics.py
backend/src/gateway/: broadcaster.py  buffer.py  server.py  signal_subscriber.py
backend/src/ingestion/: change_gate.py  deduplicator.py  normalizer.py
backend/src/models/: __init__.py  entity.py  event.py  evidence.py  signal.py
backend/src/nlp/: entity_resolver.py  finbert.py  loughran_mcdonald.py
backend/src/rag/: embedder.py  evidence_builder.py  retriever.py  vector_store.py
backend/src/storage/: database.py  entity_repo.py  event_repo.py  models.py  signal_repo.py
backend/tests/: conftest.py
backend/tests/api/: test_edgar_api.py  test_market_data_api.py  test_vector_store_api.py
backend/tests/integration/: test_agent_pipeline.py  test_edgar_ingestion.py  test_rag_retrieval.py
backend/tests/unit/: test_calibration.py  test_change_gate.py  test_deduplicator.py  test_entity_resolver.py  test_event_extraction.py  test_evidence_builder.py  test_impact_hypothesis.py  test_metrics.py  test_normalizer.py  test_retriever.py  test_risk_gate.py
(+34 files in other folders)
