[project]
name = "resonance-engine"
version = "0.1.0"
description = "Financial intelligence platform — news to structured signals for retail traders"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Fairoz Khan"},
    {name = "Reiyyan Zafar"},
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "api: tests that hit live external APIs (deselect with -m 'not api')",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
